--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ header{
     text-decoration: none;
     margin: 30px;
     padding: 0 0 0 0;
+    font-family: 'Raleway', sans-serif;
 }
 
 .nav ul li a:hover{
@@ -36,11 +37,26 @@ header{
     width: 100px;
 }
 
+h2,h3,h4,h5,p, a{
+    font-family: 'Raleway', sans-serif;
+
+}
+
+h3{
+    font-size: 25px;
+}
+
+
+
+
+
 #recherche{
 
     width: 100%;
     height: 300px;
     padding: 30px;
+
+    
 }
 
 .search{
@@ -72,7 +88,55 @@ header{
     border-radius: 10px;
     left: 5px;
     top: 2px;
+    transition: .3s ease-in-out; 
+}
+
+.photo{
+    position: absolute;
+    margin: 2px;
+    width: 200px;
+    height: 200px;
+   float: left;
+   
+  
+}
+
+.popu{
+    width: 200px;
+    height: 180px; 
+    border-radius: 20px;
+}
+
+.hotel1{
+    display: flex;
+    position: relative;
+    width: 100%;
+    height: 200px;
+    background-color: white;
+    align-items: center;
+    border-radius: 20px;
+    justify-content: space-around;
+    transition: .3s ease-in-out;
+    margin-bottom: 20px;
     
+  
+}
+
+.hotel1:hover{
+    -webkit-transform: scale(0.7);
+	transform: scale(0.7);
+}
+
+.coment{
+left: 40%;
+top: 5%;
+
+}
+
+
+.hotel:hover{
+    -webkit-transform: scale(0.6);
+	transform: scale(0.5);
 }
 
 .hotel{
@@ -84,8 +148,10 @@ header{
     top: 10px;
     margin-bottom: 15px;
     box-shadow: inset gray;
+    transition: .3s ease-in-out;
 
 }
+
 
 .fa-star.blue{
 
@@ -98,45 +164,78 @@ header{
     width: 30%;
     border-radius: 10px;
     padding: 30px;
+    display: flex;
+    flex-direction: column;
+    align-content: space-around;
 }
 
 #plus{
     display: flex;
     width: 65%;
     background-color:#F2F2F2;
-    height: 600px;
+    height: 800px;
     padding: 30px;
     border-radius: 10px;
     justify-content:space-around;
     flex-wrap: wrap;
 }
 
-
-#activites{
-
+.activite{
     width: 100%;
+    height: 600px;
+    padding: 50px;
+}
+
+#act{
+    width: 100%;
+    height:100%;
     background-color: #F2F2F2;
-    height: 300px;
+    border-radius: 10px;
+    padding: 30px;
+    display: flex;
+    justify-content: space-around;
+   
     
-   
 }
 
-.image{
-
-    width: 150px;
-    height: 150px;
+.imag{
+    width: 20%;
+    margin-right: 10px;
 }
 
-.image:hover{
-
-   
+.image1{
+    width: 100%;
+    height: 100%;
+   border-top-left-radius: 20px;
+   border-top-right-radius: 20px;
 }
+
+.image2{
+    width: 100%;
+    height: 50%;
+    border-radius: 20px;
+}
+
+
 
 footer{
+    display: flex;
     position: relative;
     background-color:#F2F2F2;
     width: 100%;
     height: 150px;
     top: 50px;
+    justify-content: space-around;
+    align-items: center;
+
+}
+
+.foot{
+    position: absolute;
+}
+
+footer a{
+    text-decoration: none;
+    color: black;
 
 }
