--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ h3{
     margin: 2px;
     width: 200px;
     height: 200px;
+    
   
 }
 
@@ -103,46 +104,69 @@ h3{
     width: 200px;
     height: 180px; 
     border-radius: 20px;
-}
-
-.hotel1{
-    display: flex;
-    position: relative;
-    width: 100%;
-    height: 200px;
-    background-color: white;
-    align-items: center;
-    border-radius: 20px;
-    justify-content: space-around;
-    transition: .3s ease-in-out;
-    margin-bottom: 20px;
   
 }
 
-.hotel1:hover{
-    -webkit-transform: scale(0.7);
-	transform: scale(0.7);
-}
 
 
 
-
-.hotel:hover{
-    -webkit-transform: scale(0.6);
-	transform: scale(0.5);
-}
 
 .hotel{
     position: relative;
     width:300px; 
-    height:220px;
+    height:250px;
     background-color: white;
     border-radius: 20px;
     top: 10px;
     margin-bottom: 15px;
     box-shadow: inset gray;
-    transition: .3s ease-in-out;
+    box-shadow: 8px 8px 10px 0 rgba(0,0,0,0.5);
+    -webkit-transition: all 0.2s;
+     -moz-transition: all 0.2s;
+     -ms-transition: all 0.2s;
+     -o-transition: all 0.2s;
+     transition: all 0.2s;
+    
+   
+}
 
+.hotel:hover{
+    transform:scale(1.1);
+
+}
+
+.hotel1{
+    position: relative;
+    float: left;
+    width: 100%;
+    background-color: white;
+    height: 200px;
+    border-radius: 20px;
+    margin-bottom: 20px;
+    box-shadow: 8px 8px 10px 0 rgba(0,0,0,0.5);
+    -webkit-transition: all 0.2s;
+    -moz-transition: all 0.2s;
+    -ms-transition: all 0.2s;
+    -o-transition: all 0.2s;
+    transition: all 0.2s;
+}
+
+.hotel1:hover{
+    transform:scale(1.1);
+
+}
+
+.photo{
+    position: absolute;
+    left: 5%;
+    top: 2%;
+   
+}
+
+.coment{
+    position:absolute;
+    left: 50%;
+    top: 50px;
 }
 
 
@@ -160,6 +184,7 @@ h3{
     display: flex;
     flex-direction: column;
     align-content: space-around;
+   
 }
 
 #plus{
@@ -194,7 +219,10 @@ h3{
 .imag{
     width: 20%;
     margin-right: 10px;
+   
 }
+
+
 
 .image1{
     width: 100%;
