--- a/style.css
+++ b/style.css
@@ -4,18 +4,25 @@
    box-sizing:border-box ;
 }
 
+
+.container{
+    width: 1024px;
+    margin-left: auto;
+    margin-right: auto;
+  
+}
+
 @media screen and (min-width: 1281px){
 
     /* header */
     header{
-        padding: 30px;;
+     
         display: flex;
         width: 100%;
         height: 100px;
         justify-content: space-between;
         align-items: center;
-     
-       
+        margin-left: 20px; 
     }
     
     .nav ul li{
@@ -48,6 +55,7 @@
     /* general  */
     h2,h3,h4,h5,p, a{
        
+        font-family: 'Raleway', sans-serif;
     
     }
     a{
@@ -55,7 +63,8 @@
     }
     
     h3{
-        font-size: 25px;
+        font-size: 20px;
+       
     }
 
    
@@ -65,6 +74,7 @@
         width: 100%;
         height: 300px;
         padding: 30px;
+        max-width: auto;
     
         
     }
@@ -97,6 +107,7 @@
         background: #d4dae4;
         border-top-left-radius: 20px;
         border-bottom-left-radius: 20px;
+
     }
     
     .search{
@@ -114,7 +125,7 @@
         padding: 10px;
         height: 50px;
         background: #0065FC;
-        color: #d4dae4;
+        color:white;
         border-top-right-radius: 15px;
         border-bottom-right-radius: 15px;
         border: none;
@@ -125,8 +136,13 @@
         align-items: center;
         padding: 30px;
         position: absolute;
-        margin-left: 20px;
         top: 300px;
+        max-width: auto;
+       margin-right: 20px;
+    }
+
+    .filtrage{
+        padding: 20px;
     }
 
   
@@ -134,7 +150,8 @@
     .filtre a{
         width: 200px;
         margin-right: 20px;
-        padding: 4px;
+        padding: 8px;
+        padding-left: 30px;
         border: 1px solid gainsboro;
         text-decoration: none;
         color: black;
@@ -149,7 +166,6 @@
     #disponible{
         display: flex;
         padding: 30px;
-        margin-left: 50px;
     }
 
    
@@ -227,8 +243,6 @@
         border-radius: 20px;
         top: 10px;
         margin-bottom: 15px;
-        box-shadow: inset gray;
-        box-shadow: 8px 8px 10px 0 rgba(0,0,0,0.5);
         -webkit-transition: all 0.2s;
          -moz-transition: all 0.2s;
          -ms-transition: all 0.2s;
@@ -236,6 +250,11 @@
          transition: all 0.2s;
          margin-top: 50px;
        
+    }
+
+    .shadow{
+        box-shadow: inset gray;
+        box-shadow: 8px 8px 10px 0 rgba(185, 183, 183, 0.5);
     }
     
     .hotel:hover{
@@ -251,7 +270,6 @@
         height: 200px;
         border-radius: 20px;
         margin-bottom: 20px;
-        box-shadow: 8px 8px 10px 0 rgba(0,0,0,0.5);
         -webkit-transition: all 0.2s;
         -moz-transition: all 0.2s;
         -ms-transition: all 0.2s;
@@ -263,7 +281,6 @@
         transform:scale(1.1);
     
     }
-    
     
     .coment{
         position:absolute;
@@ -308,7 +325,7 @@
         padding: 10px;
         background-color: #F2F2F2;
         height: 40px;
-        border-radius: 20px;
+        border-radius: 30px;
         left: 15px;
     }
 
@@ -318,7 +335,7 @@
         padding: 10px;
         background-color: #d4dae4;
         height: 40px;
-        border-radius: 20px;
+        border-radius: 30px;
         left: 15px;
         
     }
@@ -364,93 +381,61 @@
 /* section des activités */
     
     #activite{
+        display: flex;
         width: 100%;
         height: 100px;
         padding: 30px;
-    }
-    
-    #act{
-        width: 100%;
-        height:600px;
-        background-color:white;
-        border-radius: 10px;
-        display: flex;
         justify-content: space-around;
-        margin-top: 10px;
     }
 
-    #activite h3{
-        margin-left: 50px;
-    }
-
-
-    .imag{
-        width: 20%;
-        height: 80%;
-        margin-right: 10px;
-    }
-
-    .acti1{
-
-        background-color:white;
-        padding-bottom: 40px;
-        border-bottom-right-radius: 20px;
-        border-bottom-left-radius: 20px;
-        border: 1px solid rgb(238, 232, 232);
-        box-shadow: 8px 8px 10px 0 rgba(0,0,0,0.5);
-        -webkit-transition: all 0.2s;
-        -moz-transition: all 0.2s;
-        -ms-transition: all 0.2s;
-        -o-transition: all 0.2s;
-        transition: all 0.2s;
-    }
-
-    .acti2{
-        
-        background-color: white;
-        padding-bottom: 40px;
-        border-bottom-right-radius: 20px;
-        border-bottom-left-radius: 20px;
-        border: 1px solid rgb(238, 232, 232);
-        box-shadow: 8px 8px 10px 0 rgba(0,0,0,0.5);
-        -webkit-transition: all 0.2s;
-        -moz-transition: all 0.2s;
-        -ms-transition: all 0.2s;
-        -o-transition: all 0.2s;
-        transition: all 0.2s;
-        
-    }
-
-   
-
-
-
-
-
-
- 
-
-    .imag p{
-        margin: 10px;
-    }
-    
-    
-    
     .image1{
-      width: 100%;
-       height: 100%;
-       border-top-left-radius: 20px;
-       border-top-right-radius: 20px;
+        width: 300px;
+        height: 500px;
     }
-    
+
     .image2{
-        width: 100%;
-        height: 50%;
-        border-top-right-radius: 20px;
-        border-top-left-radius: 20px;
-        padding-top: 0;
+        width: 400px;
+        height: 250px;
+        margin-bottom: 20px;
+    }
+
+    .img{
+        height: max-content;
+        border: 1px solid rgb(235, 230, 230);
+        border-radius: 20px;
+        padding-bottom: 10px;
+        margin-bottom: 15px;
+    }
+
+    .img p{
+        margin-left: 5px;
+    }
+
+    .imgdouble{
+        display: flex;
+        flex-direction: column;
+        
        
     }
+
+.arrondi{
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+}
+
+.act{
+    padding: 30px;
+    margin-left: 50px;
+    position: absolute;
+    left: 40px;
+    top: 1300px;
+}
+    
+
+
+
+
+
 
 /* footer */
     
@@ -477,6 +462,10 @@
 
 
 @media screen and (min-width:414px) and (max-width:736px){
+
+   .container{
+      width: auto;
+   }
 
     header{
         position: relative;
@@ -622,23 +611,22 @@
 
     .filtre{
         display: flex;
-        align-items: center;
-        padding: 30px;
+        align-items: flex-start;
         position: absolute;
-        margin-left: 20px;
-        top: 300px;
+        top: 350px;
         flex-wrap: wrap;
         justify-content: space-around;
         width: 100%;
+        margin-left: 10px;
+       
     }
 
-  
 
     .filtre a{
         width: 200px;
-        margin-right: 20px;
         margin-bottom: 20px;
-        padding: 4px;
+        padding: 10px;
+        padding-left: 30px;
         border: 1px solid gainsboro;
         text-decoration: none;
         color: black;
@@ -649,6 +637,21 @@
         text-align: center;
       
     }
+
+    .romantique{
+        width: 100%;
+    }
+
+    .filtre h4{
+        width: 100%;
+    }
+
+
+    .filtrage{
+      margin-bottom: 10px;
+      margin-right: 10px;
+    }
+
 
     fa-star.blue{
     
@@ -704,13 +707,9 @@
     #disponible{
         position: relative;
         display: flex;
-        margin-left: 50px;
         top: 170px;
         left: 2px;
     }
-
-
-
 
     #heberge{
         display: flex;
@@ -786,7 +785,7 @@
     .hotel1{
         position: relative;
         float: left;
-        width: 100%;
+        width: 350px;
         background-color: white;
         height: 150px;
         border-radius: 20px;
@@ -825,16 +824,24 @@
     
         color: #0065FC;
     }
-    
+
+ 
     #aside{
     
         background-color:#F2F2F2 ;
-        width: 100%;
-        padding: 30px;
+        width: 736px;
+        padding: 20px;
         display: flex;
         flex-direction: column;
         align-content: space-around;
        
+    }
+
+    #graph{
+        display: flex;
+        margin-right: 50px;
+        max-width: 100%;
+        justify-content: space-between;
     }
     
     #plus{
@@ -845,15 +852,15 @@
         justify-content:space-around;
         flex-wrap: wrap;
         position: absolute;
-        top: 600px;
+        top: 650px;
     }
 
 
-    .activite{
+    #activite{
         display: flex;
-        width: 100%;
+        width: 100px;
         height: 600px;
-        top: 1800px;
+        top: 1900px;
         justify-content: space-between;
         flex-direction: column;
         margin-bottom: 100px;
@@ -871,8 +878,8 @@
     
     
     .image1{
-        width: 400px;
-        height: 200px;
+       width: 400px;
+       height: 200px;
        border-top-left-radius: 20px;
        border-top-right-radius: 20px;
     }
@@ -889,11 +896,12 @@
         display: flex;
         position: relative;
         background-color:#F2F2F2;
-        width: 100%;
+        width: 736px;
         height: 400px;
-        top: 2400px;
+        top: 2800px;
         justify-content: space-around;
         flex-direction: column;
+        margin: 4px;
     
     }
     
@@ -906,9 +914,6 @@
         color: black;
     
     }
-
-    
-    
 
 
 }
