--- a/style.css
+++ b/style.css
@@ -12,8 +12,480 @@
   
 }
 
+@media screen and (min-width: 320px)and (max-width:480px){
+    .container{
+        width: auto;
+     }
+  
+      header{
+          position: relative;
+          padding: 30px;;
+          display: flex;
+          width: 100%;
+          height: 100px;
+          justify-content:flex-end;
+          align-items: center;
+         
+      }
+  
+      .nav1{
+       position: absolute;
+       left: 40px;
+      }
+  
+      .nav2{
+          position: absolute;
+          left: 250px;
+      }
+  
+      .nav3{
+          position: absolute;
+          left: 300px;
+          top: 20px;
+      }
+  
+      .navigation{
+          position: absolute;
+          top: 70px;  
+      }
+  
+    
+      .nav ul li{
+      
+          display: inline-block;
+      }
+      .nav ul li a{
+          color:#0065FC;
+          text-decoration: none;
+           margin: 0;
+          padding: 20px;
+          padding-bottom: 10px;
+          padding-left: 10px;
+          font-family: 'Raleway', sans-serif;
+      }
+  
+      
+      .nav ul li a:hover{
+      
+          color:black;
+          border-bottom: 2px solid #0065FC;
+          color:black;
+          font-weight: 100;
+      
+      }
+      
+      .logo{
+          position: absolute;
+          width: 100px;
+          left: 10px;
+          top: 25px;
+  
+      }
+  
+      h2,h3,h4,h5,p, a{
+          font-family: 'Raleway', sans-serif;
+      
+      }
+    
+      
+      h3{
+          font-size: 22px;
+      }
+  
+      #recherche{
+          position: relative;
+          width: 100%;
+          height: 300px;
+          padding: 30px;
+          top: 20px;
+      
+          
+      }
+  
+      #barre{
+          display: flex;
+          border: 1px solid black;
+          width: max-content;
+          border-left: 0;
+          border-right: 0;
+          border-top: none;
+          border-bottom: none;
+      
+  
+      }
+  
+      .buton{
+          border:0;
+          height: 50px;
+          padding: 10px;
+          border-top: 1px solid gainsboro;
+          border-bottom:1px solid gainsboro ;
+      }
+  
+      #icone{
+          height: 50px;
+          line-height: 50px;
+          width: 40px;
+          text-align: center;
+          background: #d4dae4;
+          border-top-left-radius: 20px;
+          border-bottom-left-radius: 20px;
+      }
+  
+      .shadow{
+          box-shadow: inset gray;
+          box-shadow: 8px 8px 10px 0 rgba(185, 183, 183, 0.5);
+      }
+      
+  
+  
+      .fa-search{
+          left: 280px;
+          top: 225px;
+          background-color: #0065FC;
+          padding: 0 10px 15px 10px;
+          text-align: center;
+          line-height: 50px;
+      }
+      
+      #bouton{
+          height: 30px;
+          display: none;
+      }
+  
+      #bouton2{
+          position: relative;
+          padding: 10px;
+          height: 50px;
+          background: #0065FC;
+          color:white;
+          border: none;
+          border-radius: 20px;
+          right: 15px;
+      }
+  
+      .filtre{
+          display: flex;
+          position: absolute;
+          top: 350px;
+          flex-wrap: wrap;
+          width: 100%;
+          flex-direction:column ;
+      }
+  
+  
+      .filtre a{
+          padding:8px;
+          padding-left: 30px;
+          border: 1px solid gainsboro;
+          text-decoration: none;
+          color: black;
+          border-left: none;
+          height: 40px;
+          border-top-right-radius: 20px;
+          border-bottom-right-radius: 20px;
+          text-align: center;
+        
+      }
+  
+      .arrondi{
+          border-top-right-radius: 20px;
+          border-top-left-radius: 20px;
+      }
+  
+      .filtrage{
+          margin-bottom: 10px;
+          
+      }
+  
+      .romantique{
+          width: 100%;
+      }
+  
+      .filtre h4{
+          width: 100%;
+          padding-bottom: 10px;
+          margin-left: 20px;
+      }
+  
+      .fa-money-bill-wave{
+         position: relative;
+          color: #0065FC;
+          background-color: #F2F2F2;
+          height: 40px;
+          padding: 10px;
+          line-height: 40px;
+          border-radius: 20px;
+          left: 20px;
+         
+      }
+  
+      .fa-male{
+          position: relative;
+          color: #0065FC;
+          padding: 10px;
+          background-color: #F2F2F2;
+          height: 40px;
+          border-radius: 20px;
+          left: 15px;
+      }
+  
+      .fa-heart{
+          position: relative;
+          color: #0065FC;
+          padding: 10px;
+          background-color: #d4dae4;
+          height: 40px;
+          border-radius: 20px;
+          left: 15px;
+          
+      }
+  
+      .fa-dog{
+          position: relative;
+          color: #0065FC;
+          padding: 10px;
+          background-color: #F2F2F2;
+          height: 40px;
+          border-radius: 20px;
+          left: 20px;
+  
+      }
+  
+  
+      #disponible{
+          position: relative;
+          display: flex;
+          top: 180px;
+          left: 2px;
+      }
+  
+      #heberge{
+          display: flex;
+          width: 100%;
+          justify-content: space-around;
+          flex-direction: column-reverse;
+          position: relative;
+      }
+  
+      #marseille{
+          position: relative;
+          left: 40px;
+          top: 100px;
+  
+      }
+      
+      .images{
+         
+          width: 100%;
+          height: 150px;
+          border-top-left-radius: 20px;
+          border-top-right-radius: 20px;
+          left: 5px;
+          top: 2px;
+          padding: 5px;
+      }
+  
+      .hotel a{
+          position: absolute;
+          margin: 2px;
+          width: 100%;
+          height: 250px;
+  
+  
+      }
+      
+      .hotel1 a{
+          position: absolute;
+          margin: 2px;
+          width: 100px;
+          height: 100%;
+          
+      }
+      
+      .popu{
+          width: 150px;
+          height: 100%; 
+          border-top-left-radius: 20px;
+          border-bottom-left-radius: 20px;
+          padding: 5px;
+        
+      }
+      
+      .hotel{
+          position: relative;
+          width: 100%;
+          height:250px;
+          background-color: white;
+          border-radius: 20px;
+          top: 10px;
+          margin-bottom: 15px;
+          -webkit-transition: all 0.2s;
+           -moz-transition: all 0.2s;
+           -ms-transition: all 0.2s;
+           -o-transition: all 0.2s;
+           transition: all 0.2s;
+          margin: 15px;
+          
+         
+      }
+      
+      .hotel:hover{
+          transform:scale(1.1);
+      
+      }
+      
+      .hotel1{
+          position: relative;
+          float: left;
+          width: 350px;
+          background-color: white;
+          height: 150px;
+          border-radius: 20px;
+          margin-bottom: 20px;
+          -webkit-transition: all 0.2s;
+          -moz-transition: all 0.2s;
+          -ms-transition: all 0.2s;
+          -o-transition: all 0.2s;
+          transition: all 0.2s;
+          
+      }
+      
+      .hotel1:hover{
+          transform:scale(1.1);
+      
+      }
+      
+  
+  
+      .coment{
+          position:absolute;
+          left: 50%;
+          top: 10px;
+      }
+  
+      .commentaire{
+          position:absolute;
+          left: 5%;
+          top: 160px;
+  
+      }
+      
+      
+      .fa-star.blue{
+      
+          color: #0065FC;
+      }
+  
+   
+      #aside{
+      
+          background-color:#F2F2F2 ;
+          width: auto;
+          padding: 20px;
+          display: flex;
+          flex-direction: column;
+          align-content: space-around;
+          position: relative;
+          top:200px;
+         
+      }
+  
+      #graph{
+          display: flex;
+          justify-content: space-between;
+      }
+      
+      #plus{
+          display: flex;
+          width: 100%;
+          height: 800px;
+          border-radius: 10px;
+          justify-content:space-around;
+          flex-wrap: wrap;
+          position: absolute;
+          top: 800px;
+      }
+  
+  
+      #activite{
+          display: flex;
+          width: 100px;
+          height: 600px;
+          top: 2000px;
+          justify-content: space-between;
+          flex-direction: column;
+          margin-bottom: 100px;
+          position: relative;
+      }
+  
+      #act{
+      width: 736px;
+      margin-bottom: 50px;
+      }
+  
+      #act h3{
+          position: relative;
+          left: 100px;
+      }
+      
+  
+      .img{
+          height: max-content;
+          border-radius: 20px;
+          width: 350px;
+          margin: 10px;
+          padding: auto;
+          padding-bottom: 20px;
+          
+      }
+  
+  
+      .img p{
+          margin-left: 5px;
+      }
+      
+  
+      .image1{
+         width: 350px;
+         height: 180px;
+         
+      }
+      
+      .image2{
+          width: 350px;
+          height: 180px;
+      }
+      
+      
+      
+      footer{
+          display: flex;
+          position: relative;
+          background-color:#F2F2F2;
+          width: 736px;
+          height: 400px;
+          top: 2800px;
+          justify-content: space-around;
+          flex-direction: column;
+          margin: 4px;
+      
+      }
+      
+      .foot{
+          position: absolute;
+      }
+      
+      footer a{
+          text-decoration: none;
+          color: black;
+      
+      }
+  
+  
 
-@media screen and (min-width:414px) and (max-width:736px){
+}
+@media screen and (min-width:481px) and (max-width:767px){
 
    .container{
       width: auto;
@@ -485,7 +957,7 @@
 
 }
 
-@media screen and (min-width: 737px) and (max-width: 1024px){
+@media screen and (min-width: 768px) and (max-width: 1024px){
 
 
      /* header */
@@ -497,6 +969,12 @@
         justify-content: space-between;
         align-items: center;
         margin-left: 20px; 
+    }
+
+
+    .nav{
+        position: absolute;
+        left:  200px;
     }
     
     .nav ul li{
@@ -537,8 +1015,12 @@
     }
     
     h3{
-        font-size: 20px;
+        font-size: 15px;
        
+    }
+
+    h4, p{
+        font-size: 12px;
     }
 
    
@@ -610,7 +1092,7 @@
         align-items: center;
         padding: 30px;
         position: absolute;
-        top: 300px;
+        top: 250px;
         max-width: auto;
        margin-right: 20px;
     }
@@ -637,6 +1119,11 @@
       
     }
 
+    .filtrage{
+        position: relative;
+        padding: 20px;
+    }
+
     #disponible{
         display: flex;
         padding: 30px;
@@ -658,7 +1145,7 @@
     
     #heberge{
         display: flex;
-        padding: 30px;
+        padding: 10px;
         width: 100%;
         justify-content: space-around;
        
@@ -666,13 +1153,13 @@
 
     #marseille{
        position: absolute;
-        top: 550px;
-        left: 100px;
+        top: 500px;
+        left: 50px;
     }
     
     .images{
         width: 100%;
-        height: 150px;
+        height: 100px;
         border-top-left-radius: 20px;
         border-top-right-radius: 20px;
         left: 5px;
@@ -698,8 +1185,8 @@
     }
     
     .popu{
-        width: 200px;
-        height: 180px; 
+        width: 130px;
+        height: 150px; 
         margin: 5px;
         border-bottom-left-radius: 20px;
         border-top-left-radius: 20px;
@@ -708,12 +1195,10 @@
     
     .hotel{
         position: relative;
-        width:350px; 
-        height:250px;
+        width:180px; 
+        height:200px;
         background-color: white;
         border-radius: 20px;
-        top: 10px;
-        margin-bottom: 15px;
         -webkit-transition: all 0.2s;
          -moz-transition: all 0.2s;
          -ms-transition: all 0.2s;
@@ -738,7 +1223,7 @@
         float: left;
         width: 100%;
         background-color: white;
-        height: 200px;
+        height: 160px;
         border-radius: 20px;
         margin-bottom: 20px;
         -webkit-transition: all 0.2s;
@@ -756,13 +1241,14 @@
     .coment{
         position:absolute;
         left: 50%;
-        top: 50px;
+        top: 10px;
+
     }
 
     .commentaire{
         position:absolute;
         left: 5%;
-        top: 160px;
+        top: 100px;
 
     }
 
@@ -779,7 +1265,7 @@
     }
 
     .fa-money-bill-wave{
-       position: relative;
+       position: absolute;
         color: #0065FC;
         background-color: #F2F2F2;
         height: 40px;
@@ -791,7 +1277,7 @@
     }
 
     .fa-male{
-        position: relative;
+        position: absolute;
         color: #0065FC;
         padding: 10px;
         background-color: #F2F2F2;
@@ -801,7 +1287,7 @@
     }
 
     .fa-heart{
-        position: relative;
+        position: absolute;
         color: #0065FC;
         padding: 10px;
         background-color: #d4dae4;
@@ -812,7 +1298,7 @@
     }
 
     .fa-dog{
-        position: relative;
+        position: absolute;
         color: #0065FC;
         padding: 10px;
         background-color: #F2F2F2;
@@ -828,9 +1314,9 @@
     #aside{
     
         background-color:#F2F2F2 ;
-        width: 30%;
+        width: 40%;
         border-radius: 10px;
-        padding: 30px;
+        padding: 10px;
         display: flex;
         flex-direction: column;
         align-content: space-around;
@@ -839,10 +1325,9 @@
     
     #plus{
         display: flex;
-        width: 65%;
+        width: 55%;
         background-color:#F2F2F2;
-        height: 800px;
-        padding: 30px;
+        height: 850px;
         border-radius: 10px;
         justify-content:space-around;
         flex-wrap: wrap;
@@ -858,18 +1343,17 @@
         padding: 30px;
         justify-content: space-around;
         position: relative;
-        top: 100px;
        
     }
 
     .image1{
-        width: 300px;
-        height: 500px;
+        width: 160px;
+        height: 280px;
     }
 
     .image2{
-        width: 400px;
-        height: 250px;
+        width: 160px;
+        height: 90px;
         margin-bottom: 20px;
     }
 
@@ -909,11 +1393,6 @@
 }
     
 
-
-
-
-
-
 /* footer */
     
     footer{
@@ -922,7 +1401,7 @@
         background-color:#F2F2F2;
         width: 100%;
         height: 150px;
-        top: 700px;
+        top: 300px;
         align-items: center;
         justify-content: space-around;
         padding: 20px;
@@ -1629,6 +2108,8 @@
     
     .hotel:hover{
         transform:scale(1.1);
+        cursor: pointer;
+        background-color: #69a2f8;
     
     }
     
@@ -1809,12 +2290,6 @@
     top: 1300px;
 }
     
-
-
-
-
-
-
 /* footer */
     
     footer{
